--- a/package.json
+++ b/package.json
@@ -7,11 +7,18 @@
     "build": "webpack",
     "start:dev": "NODE_ENV=development webpack",
     "run:dev": "NODE_ENV=development nodemon build/index.js",
+    "start": "nodemon -x ts-node src/index.ts",
     "test": "jest"
   },
   "dependencies": {
     "@types/express": "^4.17.13",
-    "express": "^4.17.1"
+    "@types/mongodb": "^4.0.7",
+    "@types/mongoose": "^5.11.97",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "mongodb": "^4.1.3",
+    "mongoose": "^6.0.11",
+    "ts-node": "^10.3.0"
   },
   "devDependencies": {
     "@types/jest": "^27.0.2",
