--- a/package.json
+++ b/package.json
@@ -11,13 +11,22 @@
     "test": "jest"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
+    "@types/helmet": "^4.0.0",
+    "@types/jsonwebtoken": "^8.5.5",
     "@types/mongodb": "^4.0.7",
     "@types/mongoose": "^5.11.97",
+    "bcrypt": "^5.0.1",
+    "config": "^3.3.6",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.1.3",
     "mongoose": "^6.0.11",
+    "passport": "^0.5.0",
+    "passport-jwt": "^4.0.0",
     "ts-node": "^10.3.0"
   },
   "devDependencies": {
