--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "webpack-cli": "^4.9.0",
     "webpack-dev-server": "^4.3.1",
     "webpack-node-externals": "^3.0.0",
-    "webpack-shell-plugin-next": "^2.2.2"
+    "webpack-shell-plugin-next": "^2.2.2",
+    "worker-loader": "^3.0.8"
   }
 }
